--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -9,7 +9,7 @@
    </tr>
    <tr *ngFor="let satellite of satellites" >
       <td> {{satellite.name}} </td>   
-      <td [class.td-style]="this.satellite.shouldShowWarning()"> {{satellite.type}} </td>
+      <td [class.warning]="this.satellite.shouldShowWarning()"> {{satellite.type}} </td>
       <td> {{satellite.operational}} </td>
       <td> {{satellite.orbitType}} </td>
       <td> {{satellite.launchDate}} </td>
